# compare

./: .editorconfig  .env.example  .gitignore  .prettierignore  CNAME  README.md  SECURITY.md  components.json  eslint.config.js  package-lock.json  package.json  pyproject.toml  stores.json  svelte.config.js  vite.config.js  vite.config.ts
.cache/raw/: ak_gelblaster_au.json  ausgel.json  azraels_armoury.json  cyber_trigger.json  gel_tactical.json  rpm_tech_shop.json  sting_ops_tactical.json  urban_gel_ball.json  wat_int.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy.yml  update-data.yml
public/: CNAME
public/data/: item-history.json  locations.json  matches.json  price-history.json  stats.json  tracker-data.json
scripts/: __init__.py  categories.py  config.py  filters.py  generate_frontend.py  item_history.py  log_collector.py  matching.py  normalizers.py  price_history.py  scrape.py  utils.py  validators.py
scripts/fetchers/: __init__.py  base.py  shopify.py  squarespace.py  woocommerce.py
src/: about.html  app.css  app.d.ts  app.html  index.html  status.html  tracker.html
src/css/: main.css
src/js/: app.js  theme.js
src/lib/: utils.ts
src/lib/data/: queries.ts  schemas.ts  static.ts  types.ts
src/lib/search/: fuse.ts
src/lib/stores/: filters.svelte.ts  theme.svelte.ts  viewMode.svelte.ts
src/partials/: footer.hbs  head.hbs  header.hbs  theme-selector.hbs
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
(+30 files in other folders)
